...
                                    <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bd9-nT-ZKm">
                                        <rect key="frame" x="176" y="8" width="150" height="113"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FwM-lv-ITe">
                                                <rect key="frame" x="0.0" y="0.0" width="150" height="33"/>
                                                <fontDescription key="fontDescription" name="GESSTwoLight-Light" family="GE SS Two" pointSize="18"/>
                                                <state key="normal" title="قائمة الطلاب">
                                                    <color key="titleColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
                                                <connections>
                                                    <segue destination="f3U-k3-T8U" kind="push" identifier="studentsListViewController" id="9up-lU-FE6"/>
                                                </connections>
                                            </button>
...
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4NB-K8-QgB">
                                                            <rect key="frame" x="0.0" y="55" width="108" height="31"/>
                                                            <fontDescription key="fontDescription" name="GESSTwoLight-Light" family="GE SS Two" pointSize="17"/>
                                                            <state key="normal" title="كآفئ"/>
                                                            <connections>
                                                                <action selector="rewardStudent:" destination="f3U-k3-T8U" eventType="touchUpInside" id="NdT-Qi-bTK"/>
                                                            </connections>
                                                        </button>
                                                    </subviews>
                                                </stackView>
...
